API calls added, Basic UI done
Added login Api & flow
Validation for email & phone field
Flow to password screen
Constants file created
strings extension added

--- a/LoginFlow/Podfile
+++ b/LoginFlow/Podfile
@@ -8,6 +8,8 @@ target 'LoginFlow' do
   # Pods for LoginFlow
 
   pod 'AEOTPTextField'
+  pod 'Alamofire'
+  pod 'Toast-Swift', '~> 5.0.1'
   target 'LoginFlowTests' do
     inherit! :search_paths
     # Pods for testing
